welcome.lessons.welcome.array.arrayfront9.ArrayFront9.scala.error
arrayFront9:1: error: Missing closing brace `}' assumed here
def arrayFront9(nums:Array[Int]): Boolean = {
^arrayFront9:12: error: Missing closing brace `}' assumed here
	return false
        ^